# cookiecutter-cmake

./: README.md  cookiecutter.json
{{cookiecutter.project_name|lower}}/: CMakeLists.txt  README.md
{{cookiecutter.project_name|lower}}/src/: CMakeLists.txt  main.cpp  unittest.cpp
